Update permission api get user details
